updated login to use UserError instead of CustomError
