# web-server/src/middleware/validation/auth/validatorLogin.ts
@@ -1,32 +1,31 @@
 import { Request, Response, NextFunction } from 'express';
 import validator from 'validator';
 
-import { CustomError } from 'utils/response/custom-error/CustomError';
-import { ErrorArray } from 'utils/response/custom-error/types';
+import { UserError } from 'utils/Errors';
 
 export const validatorLogin = (req: Request, res: Response, next: NextFunction) => {
   let { email, password } = req.body;
-  const errors = new ErrorArray();
 
   email = !email ? '' : email;
   password = !password ? '' : password;
 
-  if (!validator.isEmail(email)) {
-    errors.put('email', `Email '${email}' is invalid`);
-  }
+  const err: UserError = {};
 
   if (validator.isEmpty(email)) {
-    errors.put('email', `Email field is required`);
+    err.email = 'Email field is required';
+  }
+
+  if (!validator.isEmail(email)) {
+    err.email = `Email ${email} is invalid`;
   }
 
   if (validator.isEmpty(password)) {
-    errors.put('password', `Passwords is required`);
+    err.password = 'Password field is required';
   }
 
-  if (errors.isEmpty) {
-    return next();
+  if (Object.keys(err).length) {
+    return next(err);
   } else {
-    const customError = new CustomError(400, 'Validation', 'Login validation error', null, errors);
-    return next(customError);
+    return next();
   }
 };
